# API

./: .dockerignore  app.py  connection.py  docker-compose.yml  dockerfile  pyproject.toml
controllers/: admin.py  auth.py  flashcard.py  payments.py
database/: schema.prisma
database/migrations/20250906233500_create/: migration.sql
database/migrations/20250919132830_nome_descritivo_da_migration/: migration.sql
database/seeds/: product_seeds.py  seed.py
middleware/: verification_middleware.py
models/: flashCardModel.py
outputs/: flashcard_3_Apresentação Gioia setembro 25.docx.md  flashcard_3_Criando agentes com Agno - Apostila Asimov Academy.md  flashcard_3_GlobalEVOutlook2025.md
services/: email_service.py  redis_service.py
webhook/: webhook.py
workers/: pdf_worker.py
